# using-cognite-python-sdk

./: README.md  pyproject.toml
notebooks/: 1_Authentication.ipynb  2_List_Search_Retrieve.ipynb  3_Create_Update.ipynb  4_Delete.ipynb
