[tool.poetry]
name = "using-cognite-python-sdk"
version = "0.1.0"
description = ""
authors = ["Cognite <academy@cognite.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
cognite-sdk = {extras = ["pandas"], version = "^8.0.0b2", allow-prereleases = true}
notebook = "^7.5.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
